crates/flightdiff/tests/snapshots/cli__diff_against_a_truncated_log.snap
---
source: crates/flightdiff/tests/cli.rs
expression: "run(&[\"diff\", \"good.ulg\", \"truncated.ulg\"])"
---
! testdata/truncated.ulg was cut short; only the parameters recovered before the cut were compared
no parameter differences
