crates/flightdiff/tests/snapshots/cli__info_flags_a_truncated_log.snap
---
source: crates/flightdiff/tests/cli.rs
expression: "run(&[\"info\", \"truncated.ulg\"])"
---
format:     ulog
log start:  45.000 s
parameters: 7
note:       log is truncated; recovered what was readable
