crates/flightdiff/tests/snapshots/cli__info_reports_a_complete_log.snap
---
source: crates/flightdiff/tests/cli.rs
expression: "run(&[\"info\", \"crash.ulg\"])"
---
format:     ulog
log start:  98.765 s
parameters: 7
